--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					
 					<div class="text-center">
 						<h4 class="teamName">Guda Praveen Kumar </h4>
-						<div class="Role">( Git Master )</div>
+						<div class="Role">( Backend Engineer )</div>
 						<p class="aboutMe">Freelancer and Web Developer. Worked in Tech Startup Sourceasy involved in  developed critical modules for Sourceasy such as Customer, Vendor, Shipment and Work in progress web applications and modified existing static CMS to dynamic and freelanced two projects.</p>
 						<a href="./Profiles/html/praveenProfile.html" class="btn btn-primary">Profile</a>
 					</div>
