--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 <title>Homiez | Myprofie</title>
+
+
+
+
 <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/js/libs/jquery.min.js"></script>
+<script src="/js/libs/bootstrap-carousal.js"></script>
 <!-- Custom Theme files -->
 <!--menu-->
-    <script src="js/libs/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
     <script type="text/javascript" src="js/utils/util.js"></script>
     <script type="text/javascript" src="js/apis/app.js"></script>
@@ -15,8 +19,8 @@
 <link href="css/styles.css" rel="stylesheet">
 <!--//menu-->
 <!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<link href="css/app.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="/css/app.css" rel="stylesheet" type="text/css" media="all" />	
 
 <!--//theme-style-->
 
@@ -27,7 +31,7 @@
 <!--//-->	
 <div class=" banner-buying">
 	<div class=" container">
-	<h2 id="profile-name"><span></span>asdf</h2> 
+	<h2 id="profile-name"><span></span></h2> 
 	<!---->
 	<div class="profile-image">
 			<img class="profile-picture" src="/images/te.jpg"/>
