--- a/Client/html/home.html
+++ b/Client/html/home.html
@@ -6,6 +6,8 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/libs/bootstrap-carousal.js"></script>
+<!-- Location files -->
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <!-- Custom Theme files -->
 <!--menu-->
 <script src="js/scripts.js"></script>
