--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -2,17 +2,16 @@
 <html>
 <head>
 <title>Homiez | Myprofie</title>
-
-
-
-
 <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/js/libs/jquery.min.js"></script>
 <script src="/js/libs/bootstrap-carousal.js"></script>
 <!-- Custom Theme files -->
+<!--Locations-->
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <!--menu-->
     <script src="js/scripts.js"></script>
+
     <script type="text/javascript" src="js/utils/util.js"></script>
     <script type="text/javascript" src="js/apis/app.js"></script>
     <script type="text/javascript" src="js/profile.js"></script>
