--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -2,13 +2,19 @@
 <html>
 <head>
 <title>Homiez | Myprofie</title>
+    
 <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/js/libs/jquery.min.js"></script>
+
 <script src="/js/libs/bootstrap-carousal.js"></script>
+
 <!-- Custom Theme files -->
-<!--Locations-->
-<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<!-- Location files -->
+<!--<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>-->
+
+<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
+<script src="js/libs/Location-Picker/dist/locationpicker.jquery.min.js"></script>
 <!--menu-->
     <script src="js/scripts.js"></script>
 
