--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -34,7 +34,7 @@
 	<h2 id="profile-name"><span></span></h2> 
 	<!---->
 	<div class="profile-image">
-			<img id="profile-picture" class="profile-picture" src="/images/te.jpg"/>
+			<img id="profile-picture" class="profile-picture" src=""/>
 		</div>
 
 	<div class="clearfix"> </div>
