--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -49,7 +49,7 @@
 	<div class="row">
 		<div class="col-md-6 row">
 			<div class="col-md-5"></div>
-			<div class="col-md-7" id="profile-namse"><a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-change-password">CHANGE PASSWORD</a>&nbsp;
+			<div class="col-md-7" id="profile-namse" style="padding-left: 60px;"><a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-change-password">CHANGE PASSWORD</a>&nbsp;
 				<a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-listings">LISTINGS</a></div>
 		</div>
 		<div class="col-md-6 row">
