--- a/Client/html/messages.html
+++ b/Client/html/messages.html
@@ -56,28 +56,28 @@
     <span id="error-msg" style="color: red;"></span>
 </div>
 <div class="message-right">
-	<div class="container col-md-12" style="    border: solid 1.8px #CCC;    padding: 0px !important;">
-		<div class="col-md-3" style="    border-right: solid 1.8px #CCC;padding: 0px;">
+	<div class="container col-md-12 messages-container">
+		<div class="col-md-3" style="border-right: solid 1.8px #CCC;padding: 0px;height:72.5vh;overflow: scroll;">
 			<div class="msg-list-heading col-md-12">
 				Messages
 			</div>
 			<div id="conversation-container" class="msg-list-container col-md-12">
 			</div>
 		</div>
-		<div class="col-md-9" style="    padding: 0px;">
+		<div class="col-md-9" style="padding: 0px;height:72.5vh;overflow: scroll;">
 			<div class="msg-list-heading col-md-12">
 				
 			</div>
 			<div class=" msg-list-container">
-				<div class="col-md-12 msg-thread wrap">
-					<div id="msg-thread-container" class="cell">
+				<div class="col-md-12 msg-thread wrap" style="">
+					<div id="msg-thread-container" class="cell" style="">
 					</div>
 				</div>
 				<div class="col-md-12 msg-box">
-					<div class="col-md-9" style="padding: 20px;">
-						<textarea id="text-msg" class="form-control" rows="3"></textarea>
+					<div class="col-md-11" style="padding: 10px;">
+						<textarea id="text-msg" class="form-control" style="resize: none;" rows="2"></textarea>
 					</div>
-					<div class="col-md-3" style="padding: 30px;">
+					<div class="col-md-1" style="padding: 20px;">
 						<input type="hidden" name="txt-user-id" id="txt-user-id" value="">
 						<input type="button" name="btn-send-msg" class="btn btn-default" value="Send" onclick="postMessage()">
 					</div>
