profile page UI fixes

--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -36,11 +36,11 @@
 <!--//-->	
 <div class=" banner-buying">
 	<div class=" container">
-	<h2 id="profile-name"><span></span></h2> 
-	<!---->
-	<div class="profile-image">
-			<img id="profile-picture" class="profile-picture" src=""/>
-		</div>
+	
+	
+	<div class="">
+			
+	</div>
 
 	<div class="clearfix"> </div>
 		
@@ -48,9 +48,10 @@
 	<br><br><br>
 	<div class="row">
 		<div class="col-md-6 row">
-			<div class="col-md-5"></div>
-			<div class="col-md-7" id="profile-namse" style="padding-left: 60px;"><a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-change-password">CHANGE PASSWORD</a>&nbsp;
-				<a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-listings">LISTINGS</a></div>
+			<div class="col-md-1"></div>
+			<div class="profile-image col-md-7">
+					<h2 id="profile-name"><span></span></h2>
+				</div>
 		</div>
 		<div class="col-md-6 row">
 			<div class="col-md-4">
@@ -58,28 +59,38 @@
 			<div class="col-md-2">
 			</div>
 			<div class="col-md-6">
-				<div>
-					<a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-edit">EDIT PROFILE</a>&nbsp;
-                	<a href="javascript:" style="background: white" onclick="signUpUser()" class="hvr-sweep-to-right more add-new-listing">ADD NEW LISTING</a>
-                    
-                </div>
 			</div>
-
 		</div>
 	</div>
 </div>
 <!--//header-->
 <!--contact-->
-<div class="">
-	
-	<div class="">
-
-		<div class="myprofile-content">
-			
-
+<div class="container">
+	<div class="row">
+		<div class="col-md-12" style="">
+			<div class="col-md-3">
+				
+				<div class="col-md-12" style="">
+					<img id="profile-picture" class="profile-picture" src=""/>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="" id="profile-namse">
+					<a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-change-password">CHANGE PASSWORD</a>&nbsp;
+				</div>
+			</div>
+			<div class="col-md-2">
+				<a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-listings">LISTINGS</a>
+			</div>
+			<div class="col-md-2">
+				<a href="javascript:" style="background: white" class="hvr-sweep-to-right more myprofile-edit">EDIT PROFILE</a>
+			</div>
+			<div class="col-md-2">
+				<a href="javascript:" style="background: white" onclick="signUpUser()" class="hvr-sweep-to-right more add-new-listing">ADD NEW LISTING</a>
+			</div>
 		</div>
-		
-		
+	</div>
+	<div class="myprofile-content col-md-12">
 	</div>
 </div>
 <div id="toaster"></div>
