--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -35,14 +35,9 @@
 	<div id="header-content"></div>
 <!--//-->	
 <div class=" banner-buying">
-	<div class=" container">
-	
-	
-	<div class="">
-			
-	</div>
+	<div>
 
-	<div class="clearfix"> </div>
+		<div class="clearfix"> </div>
 		
 	</div>
 	<br><br><br>
@@ -65,7 +60,7 @@
 </div>
 <!--//header-->
 <!--contact-->
-<div class="container">
+<div class="container" style="padding:0px">
 	<div class="row">
 		<div class="col-md-12" style="">
 			<div class="col-md-3">
