--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -16,8 +16,7 @@
 <script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 <script src="js/libs/Location-Picker/dist/locationpicker.jquery.min.js"></script>
 <!--menu-->
-    <script src="js/scripts.js"></script>
-
+    <script type="text/javascript" src="js/scripts.js"></script>
     <script type="text/javascript" src="js/utils/util.js"></script>
     <script type="text/javascript" src="js/apis/app.js"></script>
     <script type="text/javascript" src="js/profile.js"></script>
@@ -60,7 +59,7 @@
 </div>
 <!--//header-->
 <!--contact-->
-<div class="container" style="padding:0px">
+<div class="container" style="padding:0px;width: 100%;">
 	<div class="row">
 		<div class="col-md-12" style="">
 			<div class="col-md-3">
