commiting bug fix

--- a/Client/html/mena.html
+++ b/Client/html/mena.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Homiez | Mena Profile</title>
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-
+	<script type="text/javascript" src="js/utils/util.js"></script>
 	<script src="js/libs/jquery.min.js"></script>
     <script type="text/javascript" src="js/apis/app.js"></script>
 	<script src="js/scripts.js"></script>
