--- a/Client/html/about.html
+++ b/Client/html/about.html
@@ -5,6 +5,7 @@
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 
 	<script src="js/libs/jquery.min.js"></script>
+	<script type="text/javascript" src="js/utils/util.js"></script>
     <script type="text/javascript" src="js/apis/app.js"></script>
 	<script src="js/scripts.js"></script>
 	<link href="css/styles.css" rel="stylesheet">
