--- a/Client/html/contact.html
+++ b/Client/html/contact.html
@@ -7,6 +7,7 @@
 <script src="js/libs/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <!--menu-->
+<script type="text/javascript" src="js/utils/util.js"></script>
 <script src="js/scripts.js"></script>
     <script type="text/javascript" src="js/apis/app.js"></script>
 <link href="css/styles.css" rel="stylesheet">
