--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -3,11 +3,11 @@
 <head>
 <title>Homiez | Myprofie</title>
     
-<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="/js/libs/jquery.min.js"></script>
+<script src="js/libs/jquery.min.js"></script>
 
-<script src="/js/libs/bootstrap-carousal.js"></script>
+<script src="js/libs/bootstrap-carousal.js"></script>
 
 <!-- Custom Theme files -->
 <!-- Location files -->
@@ -23,8 +23,8 @@
 <link href="css/styles.css" rel="stylesheet">
 <!--//menu-->
 <!--theme-style-->
-<link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<link href="/css/app.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="css/app.css" rel="stylesheet" type="text/css" media="all" />	
 
 <!--//theme-style-->
 
