--- a/Client/html/saudh.html
+++ b/Client/html/saudh.html
@@ -3,7 +3,7 @@
 <head>
   <title>Homiez | Saud-Bin-Habibi Profile</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-
+  <script type="text/javascript" src="js/utils/util.js"></script>
   <script src="js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
   <script type="text/javascript" src="js/apis/app.js"></script>
