--- a/Client/html/messages.html
+++ b/Client/html/messages.html
@@ -56,7 +56,7 @@
 	   			<div class="col-sm-9 col-md-9 col-lg-9" style="padding-left:0px;">
 	   				<div class="receiver-message">
 		   				<div class='conversation-message' data-content='MessageText'></div>
-		   				<div class='chatDateTime' data-content='MsgDate'></div>
+		   				<div class='chatDateTimeReceiver' data-content='MsgDate'></div>
 	   				</div>	
 	   			</div>
 	   			<div class="col-sm-2 col-md-2 col-lg-2"></div>
