commiting bugs changes.

--- a/Client/html/profile.html
+++ b/Client/html/profile.html
@@ -13,7 +13,7 @@
 <!-- Location files -->
 <!--<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>-->
 
-<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
+<script type="text/javascript" src='https://maps.google.com/maps/api/js?key=AIzaSyAMMYyP8aymiwqJV4Icbz45WRcOWhqktU4&sensor=false&libraries=places'></script>
 <script src="js/libs/Location-Picker/dist/locationpicker.jquery.min.js"></script>
 <!--menu-->
     <script type="text/javascript" src="js/scripts.js"></script>
